# photo-roulette

./: .dockerignore  .gitignore  Dockerfile  README.md  bugs.txt  features.md  initial-prompt.md  plan.md
backend/: api.py  cleanup.py  game_logic.py  game_state.py  main.py  models.py  pyproject.toml  socket_manager.py  store.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: CountdownTimer.tsx  PhotoGrid.tsx  PlayerList.tsx  QRModal.tsx  ScoreCard.tsx
frontend/src/context/: GameContext.tsx
frontend/src/pages/: GameOverScreen.tsx  GamePage.tsx  HomePage.tsx  JoinPage.tsx  LobbyPage.tsx  RevealScreen.tsx  VotingScreen.tsx
frontend/src/types/: game.ts
