[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiofiles>=25.1.0",
    "apscheduler>=3.11.2",
    "fastapi>=0.135.2",
    "python-multipart>=0.0.22",
    "python-socketio>=5.16.1",
    "uvicorn[standard]>=0.42.0",
]
